--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,11 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
-public/
 
 # Dependency directories
 node_modules
 jspm_packages
+public
 
 # Optional npm cache directory
 .npm
