--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-shell": "^0.5.2",
     "ncp": "^2.0.0",
     "path": "^0.12.7",
+    "react-hot-loader": "^1.3.1",
     "react-router": "^3.0.0",
     "request": "^2.79.0",
     "run-sequence": "^1.2.2",
